--- a/index.html
+++ b/index.html
@@ -3,55 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Portfolio - Mohammed Mahatabul Islam</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>John Doe</h1>
-        <p>Computer Science Engineering Student</p>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Mohammed Mahatabul Islam</h1>
+            <p>Computer Science Engineering Student</p>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I am a passionate Computer Science Engineering student with a strong foundation in programming and problem-solving. I enjoy tackling complex challenges and continuously improving my skills.</p>
-    </section>
+    <main>
+        <section id="about" class="fade-in">
+            <div class="container">
+                <h2>About Me</h2>
+                <p>I am a passionate Computer Science Engineering student with a strong foundation in programming and problem-solving. I enjoy tackling complex challenges and continuously improving my skills.</p>
+            </div>
+        </section>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>C/C++</li>
-            <li>Object-Oriented Programming (OOP)</li>
-            <li>Data Structures and Algorithms (DSA)</li>
-            <li>Web Development (HTML, CSS, JavaScript)</li>
-        </ul>
-    </section>
+        <section id="skills" class="fade-in">
+            <div class="container">
+                <h2>Skills</h2>
+                <ul>
+                    <li>C/C++</li>
+                    <li>Object-Oriented Programming (OOP)</li>
+                    <li>Data Structures and Algorithms (DSA)</li>
+                    <li>Web Development (HTML, CSS, JavaScript)</li>
+                </ul>
+            </div>
+        </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>Project 1:</strong> C++ Library Management System</li>
-            <li><strong>Project 2:</strong> Data Structures Visualizer (JavaScript)</li>
-            <li><strong>Project 3:</strong> Personal Portfolio Website (HTML, CSS, JavaScript)</li>
-        </ul>
-    </section>
+        <section id="projects" class="fade-in">
+            <div class="container">
+                <h2>Projects</h2>
+                <ul>
+                    <li><strong>Project 1:</strong> C++ Library Management System</li>
+                    <li><strong>Project 2:</strong> Data Structures Visualizer (JavaScript)</li>
+                    <li><strong>Project 3:</strong> Personal Portfolio Website (HTML, CSS, JavaScript)</li>
+                </ul>
+            </div>
+        </section>
 
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Email: johndoe@example.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></p>
-    </section>
+        <section id="contact" class="fade-in">
+            <div class="container">
+                <h2>Contact Me</h2>
+                <p>Email: mohammedmahatabul@example.com</p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/mohammedmahatabulislam" target="_blank">linkedin.com/in/mohammedmahatabulislam</a></p>
+            </div>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2023 John Doe. All rights reserved.</p>
+        <p>&copy; 2025 Mohammed Mahatabul Islam. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
