--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Mohammed Mahatabul Islam</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -24,81 +23,60 @@
         </div>
     </header>
 
-    <main>
-        <!-- Hero Section -->
-        <section id="hero" class="fade-in">
-            <div class="container">
-                <h2>Welcome to My Portfolio</h2>
-                <p>I am a passionate Computer Science Engineering student with a strong foundation in programming and problem-solving.</p>
-                <a href="#about" class="btn">Learn More</a>
-            </div>
-        </section>
+    <section class="hero">
+        <div class="hero-content">
+            <img src="img.png" alt="Profile Image" class="profile-img">
+            <h1>Welcome to My Portfolio</h1>
+            <p>Passionate about coding, problem-solving, and web development.</p>
+            <a href="#projects" class="btn">View Projects</a>
+        </div>
+    </section>
 
-        <!-- About Section -->
+    <main>
         <section id="about" class="fade-in">
             <div class="container">
                 <h2>About Me</h2>
-                <p>I am a passionate Computer Science Engineering student with a strong foundation in programming and problem-solving. I enjoy tackling complex challenges and continuously improving my skills.</p>
+                <p>I am a passionate Computer Science Engineering student with a strong foundation in programming and problem-solving.</p>
             </div>
         </section>
 
-        <!-- Skills Section -->
         <section id="skills" class="fade-in">
             <div class="container">
                 <h2>Skills</h2>
-                <div class="skills-grid">
-                    <div class="skill-item">
-                        <i class="fas fa-code"></i>
-                        <h3>C/C++</h3>
-                    </div>
-                    <div class="skill-item">
-                        <i class="fas fa-cubes"></i>
-                        <h3>Object-Oriented Programming (OOP)</h3>
-                    </div>
-                    <div class="skill-item">
-                        <i class="fas fa-project-diagram"></i>
-                        <h3>Data Structures and Algorithms (DSA)</h3>
-                    </div>
-                    <div class="skill-item">
-                        <i class="fas fa-laptop-code"></i>
-                        <h3>Web Development (HTML, CSS, JavaScript)</h3>
-                    </div>
+                <div class="grid">
+                    <div class="card">C/C++</div>
+                    <div class="card">Object-Oriented Programming (OOP)</div>
+                    <div class="card">Data Structures and Algorithms (DSA)</div>
+                    <div class="card">Web Development (HTML, CSS, JavaScript)</div>
                 </div>
             </div>
         </section>
 
-        <!-- Projects Section -->
         <section id="projects" class="fade-in">
             <div class="container">
                 <h2>Projects</h2>
-                <div class="projects-grid">
-                    <div class="project-item">
-                        <h3>C++ Library Management System</h3>
-                        <p>A system to manage library operations using C++.</p>
+                <div class="grid">
+                    <div class="card">
+                        <h3>Library Management System</h3>
+                        <p>C++ based project for managing library books.</p>
                     </div>
-                    <div class="project-item">
-                        <h3>Data Structures Visualizer (JavaScript)</h3>
-                        <p>A web-based tool to visualize common data structures.</p>
+                    <div class="card">
+                        <h3>Data Structures Visualizer</h3>
+                        <p>Web-based visualizer using JavaScript.</p>
                     </div>
-                    <div class="project-item">
+                    <div class="card">
                         <h3>Personal Portfolio Website</h3>
-                        <p>A responsive portfolio website built with HTML, CSS, and JavaScript.</p>
+                        <p>Responsive portfolio with HTML, CSS, JavaScript.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Contact Section -->
         <section id="contact" class="fade-in">
             <div class="container">
                 <h2>Contact Me</h2>
                 <p>Email: mohammedmahatabul@example.com</p>
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/mohammedmahatabulislam" target="_blank">linkedin.com/in/mohammedmahatabulislam</a></p>
-                <div class="social-links">
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                </div>
             </div>
         </section>
     </main>
